--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!-- Unit 7 Project
 Requirements
-[  ] three variables
-[  ] animation
+[  yes] three variables
+[ yes ] animation
 [  ] three different shapes
 [  ] three comments
 
 Select ONE Additional 
-[ no ] Feature 1 - Use an Incrementing Shortcut 
-[ no ] Feature 2 - Use mouseX or mouseY
-[ no ] Feature 3 - Use if Statement
+[ yes ] Feature 1 - Use an Incrementing Shortcut 
+[ yes ] Feature 2 - Use mouseX or mouseY
+[ yes ] Feature 3 - Use if Statement
 [ no ] Feature 4 - Use random()
 [ no ] Feature 5 - Animate a color change
 -->
